# breeze-asr-transcriber

./: .gitignore  BreezASR.spec  README.md  gui.py  icon.icns  pyproject.toml  transcribe.py
.github/workflows/: build.yml
