[project]
name = "breeze-asr-transcriber"
version = "0.1.0"
description = "Breeze-ASR-25 音檔轉逐字稿應用"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "xinhonglin", email = "classiccrotchet@email.com"}
]
keywords = ["ASR", "transcription", "audio", "GUI"]
dependencies = [
    "customtkinter>=5.2.2",
    "numpy>=2.3.4",
    "psutil>=7.1.2",
    "soundfile>=0.13.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "transformers>=4.57.1",
]